--- a/FlyFashion/Views/Home/Confirmation.cshtml
+++ b/FlyFashion/Views/Home/Confirmation.cshtml
@@ -16,15 +16,15 @@
     <div class="container">
 
         <div>
-            <h1 class="text-center m-lg-5 text-primary">Thrift the Fit</h1>
+            <h1 class="text-center m-lg-5 text-primary">Your item has been posted on our marketplace!</h1>
         </div>
 
         <div>
-            <img src="~/images/undraw_modern_professional_yt9h.svg" class="centered" />
+            <img src="~/images/undraw_happy_feeling_slmw.svg" class="centered" />
         </div>
 
         <div class="fixed-bottom m-5 text-center">
-            <a href="/Home/PostItem" class="btn btn-primary" role="button">Post a thrift</a>
+            <a href="/Home/PostItem" class="btn btn-primary" role="button">Post another thrift</a>
             <a href="/Home/Marketplace" class="btn btn-primary" role="button">Thrift a fit</a>
         </div>
 
