--- a/FlyFashion/Views/Home/Index.cshtml
+++ b/FlyFashion/Views/Home/Index.cshtml
@@ -8,7 +8,7 @@
 <html>
 <head>
     <meta name="viewport" content="width=device-width" />
-    <title>PostItem</title>
+    <title>Thrift the Fit</title>
     <link rel="stylesheet" href="~/twitter-bootstrap/css/bootstrap.css" />
     <link rel="stylesheet" href="~/css/index.css" />
 </head>
