--- a/FlyFashion/Views/Home/Marketplace.cshtml
+++ b/FlyFashion/Views/Home/Marketplace.cshtml
@@ -1,6 +1,6 @@
 ﻿@model List<FlyFashion.Models.Item>
 @{
-    Layout = null;
+   
     Layout = "_Layout";
 }
 
@@ -17,9 +17,7 @@
 
     <div class="container-fluid">
 
-        <div>
-            <h1 class="text-center m-lg-5 text-primary">Marketplace</h1>
-        </div>
+        <div class="display-4 my-2 text-center text-primary" id="title">Marketplace</div>
 
         <div class="row justify-content-center">
 
@@ -31,11 +29,11 @@
                     <div class="card-body d-flex flex-column">
                         <h5 class="card-title">@item.Title</h5>
                         <p class="card-text text-body">Type: @item.Type</p>
-                        <p class="card-text">Price: @item.Price</p>
+                        <p class="card-text">Price: $@item.Price</p>
                         <p class="card-text">Season: @item.Season</p>
                         <p class="card-text">Colour: @item.Colour</p>
                         <p class="card-text">Condition: @item.Condition</p>
-                        <p class="card-text">Include contact and notes: @item.Description</p>
+                        <p class="card-text">Contact/Notes: @item.Description</p>
 
                     </div>
                 </div>
