--- a/FlyFashion/Views/Shared/_Layout.cshtml
+++ b/FlyFashion/Views/Shared/_Layout.cshtml
@@ -18,6 +18,8 @@
                     <a class="nav-item nav-link active" asp-action="Index">Home <span class="sr-only">(current)</span></a>
                     <a class="nav-item nav-link" asp-action="Marketplace">Marketplace</a>
                     <a class="nav-item nav-link" asp-action="PostItem">Post Item</a>
+                    <a class="nav-item nav-link" asp-action="Raincheck">Raincheck</a>
+                    <a class="nav-item nav-link" asp-action="MixAndMatch">Mix and Match</a>
 
                 </div>
             </div>
