--- a/FlyFashion/Views/Home/Raincheck.cshtml
+++ b/FlyFashion/Views/Home/Raincheck.cshtml
@@ -1,5 +1,8 @@
-﻿
+﻿@model List<FlyFashion.Models.Item>
 
+@{
+    Layout = "_Layout";
+}
 
 <!DOCTYPE html>
 
@@ -7,38 +10,53 @@
 <head>
     <meta name="viewport" content="width=device-width" />
     <title>Raincheck</title>
-
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <link rel="stylesheet" href="~/twitter-bootstrap/css/bootstrap.css" />
     <link rel="stylesheet" href="~/css/raincheck.css" />
+
 </head>
 <body onload="getLocation()">
-    <div id="body">
+    <div class="text-center container-fluid m-5">
         <script src="~/js/raincheck.js"></script>
-        <script src="http://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+        <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
 
 
-        <div class="left-bar" align="center">
-            <h2>Today's Weather</h2>
-            <div id="weather-pic">
-                <span id="icon"><img src="https://i.ibb.co/h7J6sKT/cloudy.png" alt=""></span>
-            </div>
-            <div id="weather-text">
-                <h2>Cloudy with a chance</h2>
-            </div>
-            <a href="#" class="fa fa-facebook"></a>
-            <a href="#" class="fa fa-twitter"></a>
+
+        <h2>Today's Weather</h2>
+        <div id="weather-pic">
+            <span id="icon"><img src="" alt=""></span>
+        </div>
+        <div id="weather-text">
+
+
+
         </div>
 
-        <div class="main">
-            <div id="standard-content">
-                <div id="temperature">
-                    <h1>69°</h1>
-                </div>
-                <div id="welcome">
+        <div class="row justify-content-center" >
 
+            @foreach (var item in Model)
+            {
+
+                <div class="card text-left" style="width: 20rem; margin: 30px">
+                    <img class="card-img-top" src="@item.Image" alt="image unavailable">
+                    <div class="card-body d-flex flex-column">
+                        <h5 class="card-title">@item.Title</h5>
+                        <p class="card-text text-body">Type: @item.Type</p>
+                        <p class="card-text">Price: $@item.Price</p>
+                        <p class="card-text">Season: @item.Season</p>
+                        <p class="card-text">Colour: @item.Colour</p>
+                        <p class="card-text">Condition: @item.Condition</p>
+                        <p class="card-text">Include contact and notes: @item.Description</p>
+
+                    </div>
                 </div>
-            </div>
+            }
+
+
+
         </div>
-    </div>
+
+        </div>
+
+
 </body>
 </html>
